# lgpac_cli

./: .gitignore  README.md  RSS.md  SITE_STRUCTURE.md  lgpac_cli.py  monitor_history.json  pyproject.toml
.github/workflows/: STATUS.md  crawl.yml  hn-daily.yml  lgycp-wx-miniprogram-daily.yml  rss-email-daily.yml  substack-daily.yml  xbirds-daily.yml
archs_hn/: archive.json
archs_lgycp/: archive.json
archs_substack/: archive.json  tracked.yml
archs_xbirds/: archive.json  tracked.yml  users.json
docs/: index.md
docs_hn/: index.md
docs_lgpac/: index.md
docs_lgycp/: index.md
docs_substack/: index.md
docs_xbirds/: index.md
lgpac/: __init__.py  api.py  archive.py  cli.py  client.py  config.py  hn.py  lgycp.py  models.py  monitor.py  notify.py  page.py  rss.py  scheduler.py  spider.py  storage.py  substack.py  xbirds.py
lgpac/browser/: __init__.py  actions.py  engine.py  replay.py  traversal.py
lgycp_wx_miniprogram/: DESIGN.md  IMPLEMENTATION_PLAN.md  PRODUCTION_HARDENING_DESIGN.md  PRODUCTION_HARDENING_IMPLEMENTATION_PLAN.md  README.md  __init__.py  client.py  config.py  diagnostics.py  main.py  models.py  monitor.py  notify.py  requirements.txt  storage.py
lgycp_wx_miniprogram/data/: archive.json
lgycp_wx_miniprogram/tests/: test_client.py  test_config.py  test_diagnostics.py  test_main.py  test_models.py  test_monitor.py  test_notify.py  test_security.py  test_shared_notify.py  test_storage.py  test_workflow.py
playbooks/: browse_categories.yaml  check_show.yaml
rss_email/: email_gen.py  feed_parser.py  feeds.opml  main.py  requirements.txt
(+17 files in other folders)
