[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lgpac"
version = "0.9.1"
description = "crawler & browser automation toolkit for a performing arts venue"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "requests>=2.28.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
]

[project.scripts]
lgpac = "lgpac.cli:app"

[project.optional-dependencies]
browser = ["playwright>=1.40.0"]
dev = ["pytest", "ruff"]

[tool.setuptools.packages.find]
include = ["lgpac*"]
